changed font to montserrat. fixed labels in sign in, sign up, about and contact tabs.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,6 @@ dev_dependencies:
 flutter:
   
 
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -101,6 +100,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
 
 flutter_launcher_icons:
   android: true
